--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,7 +96,7 @@ hr::before {
 
 /*nav section end */
 #banner {
-  background: url(../img/banner.jpg);
+  /* background: url(../img/banner.jpg); */
   position: relative;
   background-position: top center;
   background-repeat: no-repeat;
@@ -108,6 +108,12 @@ hr::before {
   -moz-transform: rotateY(180deg);
   -ms-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
+}
+#banner img{
+  height: 95vh;
+  width: 100%;
+  object-fit: cover;
+
 }
 
 #banner .banner-title {
