--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,15 @@ hr::before {
   border-radius: 0;
   padding: 8px 20px;
   font-weight: 700;
+  transition: all 0.8s ease;
+  -webkit-transition: all 0.8s ease;
+  -moz-transition: all 0.8s ease;
+  -ms-transition: all 0.8s ease;
+  -o-transition: all 0.8s ease;
+}
+.btn-info:hover {
+  background: #2dbba3 !important;
+  border: 0;
 }
 /* global css end */
 
