--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: "Poppins", sans-serif;
 }
 /* Global css start */
-a:hover{
+a:hover {
   text-decoration: none;
 }
 h3 {
@@ -101,9 +101,99 @@ hr::before {
 .navbar .nav-item:hover {
 }
 
-
-
 /*nav section end */
+
+
+/*===============================
+    23. preloader
+===============================*/
+
+.loader-overlay {
+    background-color: rgba(255, 255, 255, 1);
+    height: 100%;
+    width: 100%;
+    transition: opacity .5s ease-in-out;
+    position: absolute;
+    top: 0;
+    left: 0;
+}
+.preloader {
+    background: #30ddb6 none repeat scroll 0 0;
+    height: 100%;
+    position: fixed;
+    width: 100%;
+    z-index: 9999999;
+}
+.preloader-inner-area {
+    height: 100%;
+    position: relative;
+    text-align: center;
+    width: 100%;
+}
+.l-preloader {
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    margin: auto;
+}
+.c-preloader {
+    width: 100px;
+    height: 100px;
+    position: relative;
+}
+.c-preloader::before {
+    content: '';
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #008cb5;
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    animation-name: preloading;
+    animation-duration: 1.2s;
+    animation-delay: 0s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+.c-preloader::after {
+    content: '';
+    width: 100px;
+    height: 100px;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    background-color: #008cb5;
+    opacity: 0;
+    -webkit-transform: scale(0);
+    transform: scale(0);
+    animation-name: preloading;
+    animation-duration: 1.2s;
+    animation-delay: -0.6s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+@keyframes preloading {
+    0% {
+        opacity: 1;
+        transform: scale(0);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1);
+    }
+}
+
+
+
+
+
 #banner {
   /* background: url(../img/banner.jpg); */
   position: relative;
@@ -118,11 +208,10 @@ hr::before {
   -ms-transform: rotateY(180deg);
   -o-transform: rotateY(180deg);
 }
-#banner img{
+#banner img {
   height: 95vh;
   width: 100%;
   object-fit: cover;
-
 }
 
 #banner .banner-title {
@@ -455,62 +544,69 @@ footer {
   padding: 165px 0;
   color: #ffffff;
 }
-.footer-logo img{}
-.footer-logo p{
-    font-size: 11px;
-    margin-left: 11px;
-    padding: 30px 0;
+.footer-logo img {
 }
-.footer-logo button{}
-.footer-logo .btn-info{
-    margin-left: 10px;
-    padding: 20px 35px;
-    background: #22a690 !important;
+.footer-logo p {
+  font-size: 11px;
+  margin-left: 11px;
+  padding: 30px 0;
 }
-footer .footer-widget{
-    padding: 0 25px;
+.footer-logo button {
 }
-footer .footer-widget h4, .footer-widget-1 h4{
-    font-size: 15px;
-    font-weight: 700;
+.footer-logo .btn-info {
+  margin-left: 10px;
+  padding: 20px 35px;
+  background: #22a690 !important;
 }
-footer .footer-widget ul, .footer-widget-1 ul{
-    padding-left: 0;
+footer .footer-widget {
+  padding: 0 25px;
 }
-footer .footer-widget ul li, .footer-widget-1 ul li {
+footer .footer-widget h4,
+.footer-widget-1 h4 {
+  font-size: 15px;
+  font-weight: 700;
+}
+footer .footer-widget ul,
+.footer-widget-1 ul {
+  padding-left: 0;
+}
+footer .footer-widget ul li,
+.footer-widget-1 ul li {
   list-style: none;
 }
-footer .footer-widget ul li i, .footer-widget-1 ul li i {
+footer .footer-widget ul li i,
+.footer-widget-1 ul li i {
   color: #2cbdb8;
 }
-footer .footer-widget ul li a{
-    font-size: 12px;
-    color: #ffffff;
-    font-weight: 700;
+footer .footer-widget ul li a {
+  font-size: 12px;
+  color: #ffffff;
+  font-weight: 700;
 }
 .fa-caret-right:before {
   content: "\f0da";
 }
-.footer-widget-1 ul li a{
-   font-size: 16px;
-    color: #ffffff;
-    font-weight: 700;
+.footer-widget-1 ul li a {
+  font-size: 16px;
+  color: #ffffff;
+  font-weight: 700;
 }
-footer .footer-widget ul p, .footer-widget-1 ul p{
-    font-size: 10px;
-    font-weight: 300;
+footer .footer-widget ul p,
+.footer-widget-1 ul p {
+  font-size: 10px;
+  font-weight: 300;
 }
-footer .contact-option li{margin-bottom: 15px;}
-footer .contact-option i{
+footer .contact-option li {
+  margin-bottom: 15px;
+}
+footer .contact-option i {
   color: #2cbdb8;
   padding-right: 13px;
 }
-footer .contact-option a{
-    font-size: 14px !important;
-    font-weight: 400 !important;
-    padding-left: 0px;
+footer .contact-option a {
+  font-size: 14px !important;
+  font-weight: 400 !important;
+  padding-left: 0px;
 }
 
 /* footer Section end */
-
-
